--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url-loader": "^0.6.2",
     "vue": "^2.5.3",
     "vue-loader": "^13.5.0",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.3",
     "webpack": "^3.8.1"
